--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,61 +1,35 @@
 ---
-interface Props {
-	title: string;
-	body: string;
-	href: string;
-}
-
-const { href, title, body } = Astro.props;
+const { title, image, description, success, id } = Astro.props;
+const launchStatus = success ? "Success" : "Failure";
 ---
 
-<li class="link-card">
-	<a href={href}>
-		<h2>
-			{title}
-			<span>&rarr;</span>
-		</h2>
-		<p>
-			{body}
-		</p>
-	</a>
-</li>
-<style>
-	.link-card {
-		list-style: none;
-		display: flex;
-		padding: 1px;
-		background-color: #23262d;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 7px;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.1);
-	}
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: calc(1.5rem - 1px);
-		border-radius: 8px;
-		color: white;
-		background-color: #23262d;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent-light));
-	}
-</style>
+<a href={`/launch/${id}`}>
+	<div
+		class="flex flex-col bg-white border shadow-sm rounded-xl dark:bg-slate-900 dark:border-gray-700 dark:shadow-slate-700/[.7]"
+	>
+		<img
+			class="w-rounded-t-xl mx-auto p-5"
+			width="300"
+			height="300"
+			src={image}
+			alt="Image Description"
+		/>
+		<div class="p-4 md:p-5">
+			<h3 class="text-lg font-bold text-gray-800 dark:text-white">{title}</h3>
+			<p class="mt-1 text-gray-500 dark:text-gray-400 h-[4.5rem] line-clamp-3">
+				{description}
+			</p>
+			<p
+				class:list={[
+					"mt-5 text-xs text-gray-800 inline-block p-2 rounded-md font-bold",
+					{
+						"bg-green-400 text-green-900": success,
+						"bg-red-400 text-red-900": !success,
+					},
+				]}
+			>
+				{launchStatus}
+			</p>
+		</div>
+	</div>
+</a>
