--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -3,7 +3,7 @@ const { href } = Astro.props;
 ---
 
 <a
-	class="inline-block rounded border border-current px-8 py-3 text-sm font-medium text-gray-400 transition hover:scale-110 hover:shadow-xl focus:outline-none focus:ring active:text-indigo-500 w-64 stroke-gray-400"
+	class="w-62 rounded border border-current px-8 py-3 text-sm font-medium text-gray-400 transition hover:scale-110 hover:shadow-xl focus:outline-none focus:ring active:text-indigo-500 stroke-gray-400"
 	href={href}
 >
 	<slot />
