--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,7 +7,7 @@ import Layout from "../layouts/Layout.astro";
 		<h1 class="text-xl">Angel Moreno</h1>
 		<a
 			href="https://angel-m-r.github.io"
-			class="m-10 px-10 py-4 inline-block border-teal-100 border-2 rounded-xl hover:bg-slate-600"
+			class="m-10 px-10 py-4 inline-block border-teal-100 border-[1px] rounded-xl hover:bg-slate-800"
 			>Portfolio</a
 		>
 	</main>
